src- Version 4.19/objects/Tax_Rate__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>Holds the VAT/Tax rates, codes, zones etc</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>*</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <description>This field can be used if you wish to tie the Tax rates with different legal entities. Particularly helpful when you manage Orders/Invoices for multiple companies each having its own Tax rate.</description>
        <inlineHelpText>This field can be used if you wish to tie the Tax rates with different legal entities. Particularly helpful when you manage Orders/Invoices for multiple companies each having its own Tax rate.</inlineHelpText>
        <label>Legal Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <defaultValue>&quot;*&quot;</defaultValue>
        <label>Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Specify the importance of this Tax rate by giving it a number value. Lower numbers have higher value. 
If two Tax rules have the same priority number, their taxes are added together. Otherwise their taxes are compounded.
For eg, If you have 2 tax rates GST and QST where GST is calculated first and then QST is compounded on top of GST, then GST can have a priority of 0 and QST a priority of 1.</description>
        <inlineHelpText>Specify the importance of this Tax rate by giving it a number value. Lower numbers have higher value. 
If two Tax rules have the same priority number, their taxes are added together. Otherwise their taxes are compounded.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <label>Product Charge Category</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Taxable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>*</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated States Of Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_VAT__c</fullName>
        <description>Select if this rate is a Tax or a VAT</description>
        <inlineHelpText>Select if this rate is a Tax or a VAT</inlineHelpText>
        <label>Tax / VAT</label>
        <picklist>
            <picklistValues>
                <fullName>VAT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>VAT / Tax Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Legal_Entity_Name__c</columns>
        <columns>Product_Charge_Category__c</columns>
        <columns>Tax_VAT__c</columns>
        <columns>Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tax Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT / Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Category_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Product_Charge_Category__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Charge_Category__c</errorDisplayField>
        <errorMessage>You must select a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( City__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>You must select a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Country_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Country__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>You must select a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priority_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Priority__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Priority__c</errorDisplayField>
        <errorMessage>You must select a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>State_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( State__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>You must select a value</errorMessage>
    </validationRules>
</CustomObject>